# otel-demo

./: .env  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
aiokafka_instrumentation/: __init__.py  package.py  utils.py
cli/: main.py
service_1/: main.py
service_2/: main.py
src/otel_demo/: __init__.py
src/otel_demo/aiokafka_instrumentation/: __init__.py
src/otel_demo/cli/: main.py
src/otel_demo/service_1/: main.py
src/otel_demo/service_2/: main.py
