[project]
name = "otel-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "didimelli", email = "davide.melli@dorbit.space" }
]
dependencies = [
    "aiokafka>=0.10.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-distro>=0.45b0",
    "opentelemetry-sdk>=1.24.0",
    "anyio>=4.3.0",
    "asyncclick>=8.1.7.2",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "pre-commit>=3.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/otel_demo"]
