[project]
name = "otel-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.11.0",
    "anyio>=4.5.0",
    "asyncclick>=8.1.7.2",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.5",
]
